--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <head>
   <meta charset="utf-8">
   <title>JS1 Quizkampen</title>
+  <style>
+    * {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      background-color: PapayaWhip;
+    }
+    input {
+      padding: 5px;
+    }
+  </style>
 </head>
 <body>
 
-  
+  <div id="content"></div>
 
 </body>
 </html>
+<script src="main.js"></script>
