Added eventlisteners to all the buttons

--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
       padding: 0;
     }
     body {
-      background-color: PapayaWhip;
+      background-color: Linen;
+    }
+    ul {
+      margin: 50px;
+    }
+    li {
+      margin-bottom: 30px;
     }
     input {
+      background-color: Gainsboro;
+      min-width: 120px;
       padding: 5px;
+      margin: 5px;
+      border: 2px solid White;
+    }
+    input:hover {
+      background-color: White;
     }
   </style>
 </head>
