--- a/index.html
+++ b/index.html
@@ -2,32 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>JS1 Quizkampen</title>
-  <style>
-    * {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-    }
-    body {
-      background-color: Linen;
-    }
-    ul {
-      margin: 50px;
-    }
-    li {
-      margin-bottom: 30px;
-    }
-    input {
-      background-color: Gainsboro;
-      min-width: 200px;
-      padding: 5px;
-      margin: 5px;
-      border: 2px solid White;
-    }
-    input:hover {
-      background-color: White;
-    }
-  </style>
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
