--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="utf-8">
   <title>JS1 Quizkampen</title>
   <link href="style.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=OpenSans|Montserrat" rel="stylesheet">
 </head>
 <body>
 
