Let the user choose difficulty

--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 </head>
 <body>
 
-  <div id="content">
-    <h1>The best quiz ever</h1>
+  <h1>The best quiz ever</h1>
+  <div id="choices" class="container">
+    <ul id="level">
+      <input type="submit" value="Easy">
+      <input type="submit" value="Medium">
+      <input type="submit" value="Hard">
+    </ul>
+    <input id="start" type="submit" value="Start quiz">
   </div>
+
+  <div id="content" class="container"></div>
 
 </body>
 </html>
