Let the player choose category

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
   <h1>The best quiz ever</h1>
   <div id="choices" class="container">
+    <ul id="cat">
+      <input type="submit" value="Video games">
+      <input type="submit" value="Board games">
+      <input type="submit" value="Cartoon">
+      <input type="submit" value="Anime & Manga">
+    </ul>
     <ul id="level">
       <input type="submit" value="Easy">
       <input type="submit" value="Medium">
