--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
   <link href="https://fonts.googleapis.com/css?family=OpenSans|Montserrat" rel="stylesheet">
 </head>
 <body>
-
+<div id="wrapper">
   <h1>The best quiz ever</h1>
   <div id="choices" class="container">
     <ul id="cat">
+      <h2>Category:</h2>
       <input type="submit" value="Video games">
       <input type="submit" value="Board games">
       <input type="submit" value="Cartoon">
       <input type="submit" value="Anime & Manga">
     </ul>
     <ul id="level">
+    <h2>Level:</h2>
       <input type="submit" value="Easy">
       <input type="submit" value="Medium">
       <input type="submit" value="Hard">
@@ -24,6 +26,7 @@
   </div>
 
   <div id="content" class="container"></div>
+</div>
 
 </body>
 </html>
