Let the player choose numbers of questions

--- a/index.html
+++ b/index.html
@@ -11,16 +11,24 @@
   <div id="choices" class="container">
     <ul id="cat">
       <h2>Category:</h2>
-      <input type="submit" value="Video games">
-      <input type="submit" value="Board games">
-      <input type="submit" value="Cartoon">
       <input type="submit" value="Anime & Manga">
+      <input type="submit" value="Board games">
+      <input type="submit" value="Cartoons">
+      <input type="submit" value="Film">
+      <input type="submit" value="Music">
+      <input type="submit" value="Musicals">
+      <input type="submit" value="Video games">
+      <input type="submit" value="Television">
     </ul>
     <ul id="level">
     <h2>Level:</h2>
       <input type="submit" value="Easy">
       <input type="submit" value="Medium">
       <input type="submit" value="Hard">
+    </ul>
+    <ul id="number">
+    <h2>Antal frågor:</h2>
+      <input id="num" type="text" value="">
     </ul>
     <input id="start" type="submit" value="Start quiz">
   </div>
